# dius

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  README_8md.html  address_8h.html  address_8h.js  address_8h_source.html  allocate_8h.html  allocate_8h.js  allocate_8h_source.html  annotated.html  annotated_dup.js  arch__system__call_8h.html  arch__system__call_8h.js  arch__system__call_8h_source.html  architecture__docs_8md.html  build_8md.html  classdi_1_1platform_1_1GenericDomain-members.html  classdi_1_1platform_1_1GenericDomain.html  classdi_1_1platform_1_1GenericDomain.js  classdius_1_1ConditionVariable-members.html  classdius_1_1ConditionVariable.html  classdius_1_1ConditionVariable.js  classdius_1_1IoContext-members.html  classdius_1_1IoContext.html  classdius_1_1IoContext.js  classdius_1_1MemoryRegion-members.html  classdius_1_1MemoryRegion.html  classdius_1_1MemoryRegion.js  classdius_1_1Mutex-members.html  classdius_1_1Mutex.html  classdius_1_1Mutex.js  classdius_1_1SteadyClock-members.html  classdius_1_1SteadyClock.html  classdius_1_1SteadyClock.js  classdius_1_1SyncFile-members.html  (+692 more)
.github/workflows/: darwin.yml  docs.yml  gen.yml  lint.yml  linux.yml
docs/: layout.xml
docs/pages/: build.md  developing.md  library_component_overview.md  linux_startup.md
include/dius/: config.h  error.h  io_context.h  ipc.h  main.h  memory_region.h  platform.h  print.h  steady_clock.h  sync_file.h  thread.h  tty.h
include/dius/darwin/: condition_variable.h  error.h  mutex.h  process.h  system_call.h  thread.h
include/dius/darwin/filesystem/: file_type.h
include/dius/filesystem/: directory_entry.h  directory_iterator.h  file_status.h  file_type.h  operations.h  perms.h  recursive_directory_iterator.h
include/dius/filesystem/query/: exists.h  file_size.h  hard_link_count.h  is_block_file.h  is_character_file.h  is_directory.h  is_empty.h  is_fifo.h  is_other.h  is_regular_file.h  is_socket.h  is_symlink.h  status.h  status_known.h  symlink_status.h
include/dius/iros/: condition_variable.h  process.h  system_call.h  thread.h
include/dius/linux/: condition_variable.h  io_uring.h  io_uring_context.h  ipc.h  mutex.h  system_call.h  thread.h
include/dius/net/: address.h
include/dius/posix/: condition_variable.h  mutex.h  thread.h
include/dius/runtime/: allocate.h  tls.h
include/dius/system/: process.h  system_call.h
include/dius/test/: macro.h  prelude.h  test_case.h  test_manager.h
include/generic/dius/: condition_variable.h  error.h  io.h  io_context.h  ipc.h  main.h  mutex.h  print.h  sync_file.h  thread.h
include/generic/dius/filesystem/: directory_entry.h  directory_options.h  operations.h  prelude.h
include/generic/dius/net/: address.h  socket.h
include/generic/dius/system/: prelude.h  process.h
include/generic/dius/unicode/: default_ignorable_code_point.h  east_asian_width.h  emoji.h  emoji_presentation.h  extended_pictographic.h  general_category.h  grapheme_cluster.h  grapheme_cluster_break.h  name.h  property_range.h  regional_indicator.h  unicode.h  width.h
include/platform/linux/dius/: config.h  io_context.h  platform_process.h
include/platform/posix/dius/: c_definitions.h  config.h  mutex.h  platform.h  platform_error.h  platform_process.h  platform_thread.h
include/runtime/generic/dius/: platform.h
meta/cmake/: dev-mode.cmake  docs.cmake  install-config.cmake  install-rules.cmake  tidy.cmake  variables.cmake
meta/nix/: packages.nix
meta/nix/dev/: devshell.nix  format.nix
meta/scripts/: run-clang-tidy.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+137 more)
src/: CMakeLists.txt  di_assert_impl.cpp  error.cpp  sync_file.cpp
src/generic/: di_assert_impl.cpp  sync_file_base.cpp
src/generic/unicode/: default_ignorable_code_point.cpp  east_asian_width.cpp  emoji.cpp  emoji_presentation.cpp  extended_pictographic.cpp  general_category.cpp  grapheme_cluster.cpp  grapheme_cluster_break.cpp  lookup.cpp  regional_indicator.cpp  width.cpp
src/iros/: sync_file.cpp
src/iros/filesystem/: directory_iterator.cpp  operations.cpp  query.cpp
src/linux/: io_uring.cpp  io_uring_context.cpp  memory_region.cpp  sync_file.cpp
src/linux/filesystem/: directory_iterator.cpp  operations.cpp  query.cpp
src/platform/darwin/: sleep.cpp  utils.cpp
src/platform/linux/: epoll.cpp  epoll_context.cpp  eventfd.cpp  io_uring.cpp  io_uring_context.cpp  open_temp_file.cpp  pipe.cpp  sync_file.cpp
src/platform/linux/filesystem/: directory_iterator.cpp  operations.cpp  query.cpp
src/platform/linux/net/: socket_create.cpp
src/platform/posix/: memory_region.cpp  mutex.cpp  pipe.cpp  sleep.cpp  steady_clock.cpp  sync_file.cpp  syscalls.cpp  thread.cpp  utils.cpp
src/platform/posix/filesystem/: directory_iterator.cpp  operations.cpp  query.cpp
src/posix/: thread.cpp
src/posix/system/: process.cpp
src/runtime/: allocate.cpp  compilerabi.cpp  cxxabi.cpp  cxxheap.cpp  entry.cpp  gccints.cpp
src/runtime/generic/: allocate.cpp  compilerabi.cpp  cxxabi.cpp  entry.cpp  gccints.cpp  stack_smash_protector.cpp
src/runtime/iros/: steady_clock.cpp  thread.cpp
src/runtime/linux/: steady_clock.cpp  thread.cpp
src/test/: test_main.cpp  test_manager.cpp
src/test_main/: test_main.cpp
test/: CMakeLists.txt  test_filesystem.cpp  test_ipc.cpp  test_process.cpp  test_process_arg_passing_fixture.cpp  test_socket.cpp  test_tls.cpp
test/src/: grapheme_break_test_data.h  test_filesystem.cpp  test_io_context.cpp  test_ipc.cpp  test_process.cpp  test_socket.cpp  test_tls.cpp  test_unicode.cpp  test_unicode_grapheme_cluster.cpp  test_unicode_properties.cpp  test_unicode_width.cpp
(+39 files in other folders)
